# snake_cpp

./: .gitignore  CMakeLists.txt  README.md  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters  assorted.cpp  assorted.h  console_handle.cpp  console_handle.h  environment.cpp  environment.h  food.cpp  food.h  main.cpp  snake.cpp  snake.h
Debug/: Snake.exe.recipe  Snake.ilk  Snake.vcxproj.FileListAbsolute.txt  main.obj.enc  vc142.idb
Debug/Snake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Snake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
